--- a/lesson2/css-02/style-02.css
+++ b/lesson2/css-02/style-02.css
@@ -1,1 +1,123 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap");
+
+#lastupdated {
+  color: yellow;
+}
+
+.body {
+  background-color: #8EA8C3;
+  margin: 0 auto;
+  height: 100vh;
+  width: 85vw;
+  font-size: 1.1em;
+
+}
+
+a {
+  color: #C2F970;
+}
+
+header,
+footer {
+  background-color: #703d57;
+  color: whitesmoke;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+html {
+  font-family: 'Poppins', sans-serif;
+}
+
+h1 h2 h3 h4 h5 h6 {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+  text-align: left;
+
+  padding: 10px;
+}
+
+figure {
+  text-align: center;
+}
+
+.grid-container {
+  max-width: 85vw;
+  margin: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+
+  gap: 10px 10px;
+}
+
+.grid-item {
+  padding: 10px;
+  background-color: whitesmoke;
+
+  border-radius: 10px;
+}
+
+.grid-header {
+  padding: .5rem;
+  background-color: #703d57;
+  color: whitesmoke;
+  margin-top: -10px;
+  margin-left: -10px;
+  margin-right: -10px;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+@media (max-width: 760px) {
+  .grid-container {
+    display: block;
+
+  }
+
+  .header {
+    display: block;
+  }
+
+  .main {
+    text-align: left;
+  }
+
+  .footer {
+    line-height: normal;
+  }
+
+  .figure img {
+    width: 10.5rem;
+  }
+
+
+}
+
+
+@media screen and (max-width: 550px) {
+  .grid-container {
+    display: block;
+  }
+
+  .header {
+    display: block;
+  }
+
+  .main {
+    text-align: left;
+  }
+
+  .footer {
+    line-height: normal;
+  }
+
+  .figure img {
+    width: 10.5rem;
+  }
+
+
+}
