color link noted

--- a/lesson2/css-02/style-02.css
+++ b/lesson2/css-02/style-02.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap");
 
+/* https: //coolors.co/c2f970-703d57-406e8e-8ea8c3-ffeaee */
+
 #lastupdated {
   color: yellow;
 }
