final - cross my fingers wk 2 website

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 font-family: 'Roboto', sans-serif; */
 
 /* https://coolors.co/7d2e68-82aeb1-08415c-34623f-9e8fb2 */
+/* https: //coolors.co/7d2e68-a3bbad-08415c-65532f-312509 */
 
 
 #lastupdated {
