--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -1,24 +1,84 @@
-@media screen and (max-width: 940px) {
-  .grid-container {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap");
 
-  .header {
-    display: block;
-  }
+/* https: //coolors.co/c2f970-703d57-406e8e-8ea8c3-ffeaee */
 
-  .main {
-    text-align: left;
-  }
+#lastupdated {
+  color: yellow;
+}
 
-  .footer {
-    line-height: normal;
-  }
+.body {
 
-  .figure img {
-    width: 20rem;
-  }
+  background-color: #8EA8C3;
+  margin: 0 auto;
+  height: 100vh;
+  width: 90vw;
+  font-size: 1.1em;
 
+}
 
+a {
+  color: #703d57;
+}
+
+header,
+footer {
+  background-color: #703d57;
+  color: whitesmoke;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.byu-link {
+  color: whitesmoke;
+}
+
+html {
+  font-family: 'Poppins', sans-serif;
+}
+
+h1 h2 h3 h4 h5 h6 {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+  text-align: center;
+
+  padding: 10px;
+}
+
+figure {
+  text-align: center;
+}
+
+img {
+  width: 40%;
+}
+
+.grid-container {
+
+  max-width: 100%;
+  margin: 1rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px 10px;
+}
+
+.grid-item {
+
+  padding: 10px;
+  background-color: whitesmoke;
+  border-radius: 10px;
+}
+
+.grid-header {
+  padding: .5rem;
+  background-color: #703d57;
+  color: whitesmoke;
+  margin-top: -10px;
+  margin-left: -10px;
+  margin-right: -10px;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
