--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -5,15 +5,15 @@
 
   }
 
-  .header {
+  header {
     display: block;
   }
 
-  .main {
+  main {
     text-align: left;
   }
 
-  .footer {
+  footer {
     line-height: normal;
   }
 
