--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -17,7 +17,7 @@ header,
 footer {
   background-color: #344966;
   color: #b4cded;
-  padding: 20px;
+  padding: 0;
   text-align: center;
   display: flex;
   flex-flow: column;
