--- a/lesson4/css/large.css
+++ b/lesson4/css/large.css
@@ -1,8 +1,1 @@
-@media only screen and (min-width: 60em) {
-  main {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-
-
-
-}
+@media only screen and (min-width: 60em) {}
