--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -17,26 +17,40 @@ header,
 footer {
   background-color: #344966;
   color: #b4cded;
-  padding: 0;
-  margin: 0;
   display: flex;
+  justify-content: center;
+  padding: 20px;
 }
 
-footer {
-  margin-top: 10px;
+header {
+  padding: 15px;
 }
 
 header img {
+  align-self: center;
+  padding-left: 15px;
+  padding-right: 15px;
   max-width: 85px;
-  width: 100%;
 }
 
-img {
-  width: 100%;
+section {
+  display: flex;
+  flex-direction: column;
 }
 
-.site-map {
-  max-width: 30rem;
+section p {
+  align-self: center;
+  margin: 0;
+}
+
+footer {
+  flex-flow: column;
+  align-items: center;
+}
+
+footer p {
+  padding: 0;
+  margin: 0;
 }
 
 h1,
@@ -49,30 +63,26 @@ h6 {
   font-family: 'Montserrat', sans-serif;
 }
 
-h1 {
-  text-align: center;
-  padding: 10px;
+section h1 {
   color: #b4cded;
+  margin: 0;
+  align-self: center;
 }
 
 h2 {
   text-align: center;
+  padding: 15px;
+  margin: 5px;
 }
 
 nav {
   background-color: #0d1821;
-  margin: 0 auto;
+  margin: -18px auto;
 }
 
-ul {
-  display: block;
-}
-
-nav ul {
-  list-style-type: none;
-
+.navigation {
+  list-style: none;
   padding: 0;
-  overflow: hidden;
 
 }
 
@@ -84,15 +94,13 @@ nav ul {
   display: none;
 }
 
-nav ul li a {
+.navigation a {
   display: block;
-  padding: 12px;
   color: #b4cded;
+  padding: 12px;
+  text-align: center;
   text-decoration: none;
   font-size: 1.25rem;
-  text-align: center;
-  transition: 0.5s;
-  flex: 1 1 100%;
 }
 
 .navigation a:hover {
@@ -106,32 +114,13 @@ nav ul li a {
   display: block;
 }
 
-.head-grid-container {
-  max-width: 100%;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 10px 10px;
-  align-items: left;
-}
-
-.main-grid-container {
-  max-width: 100%;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 10px 10px;
-}
-
-.main-grid-container {
+.main-container {
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
-
 }
 
-.main-grid-container p {
+.main-container p {
   padding: 15px;
-  margin: 1px;
+  margin: 5px;
   background-color: whitesmoke;
 }
