--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -17,23 +17,44 @@ header,
 footer {
   background-color: #344966;
   color: #b4cded;
-  padding: 0;
-  text-align: center;
   display: flex;
-  flex-flow: column;
-  align-items: center;
   justify-content: center;
+  padding: 20px;
+}
 
+header {
+  padding: 15px;
 }
 
 header img {
+  align-self: center;
+  padding-left: 15px;
+  padding-right: 15px;
   max-width: 85px;
-  width: 100%;
 }
 
 img {
   width: 100%;
+}
 
+section {
+  display: flex;
+  flex-direction: column;
+}
+
+section p {
+  align-self: center;
+  margin: 0;
+}
+
+footer {
+  flex-flow: column;
+  align-items: center;
+}
+
+footer p {
+  padding: 0;
+  margin: 0;
 }
 
 .site-map {
@@ -51,19 +72,64 @@ h6 {
 
 }
 
-h1 {
-  text-align: center;
-  padding: 10px;
-  color: #b4cded;
-
-}
-
 picture {
   text-align: center;
 }
 
+section h1 {
+  color: #b4cded;
+  margin: 0;
+  align-self: center;
+}
+
+h2 {
+  text-align: center;
+  padding: 15px;
+  margin: 5px;
+}
 
 nav {
+  background-color: #0d1821;
+  margin: -18px auto;
+}
+
+.navigation {
+  list-style: none;
+  padding: 0;
+
+}
+
+.navigation li:first-child {
+  display: block;
+}
+
+.navigation li {
+  display: none;
+}
+
+.navigation a {
+  display: block;
+  color: #b4cded;
+  padding: 12px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1.25rem;
+}
+
+.navigation a:hover {
+  background-color: #f0f4ef;
+  color: #0d1821;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.responsive li {
+  display: block;
+}
+
+
+
+/* nav {
   background-color: #0d1821;
 }
 
@@ -88,7 +154,7 @@ nav ul li a {
   text-align: center;
   flex: 1 1 100%;
 
-}
+} */
 
 table,
 th,
@@ -129,15 +195,6 @@ a:hover {
   font-size: 1.25rem;
   font-weight: bold;
 
-}
-
-.head-grid-container {
-  max-width: 100%;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 10px 10px;
-  align-items: left;
 }
 
 .main-grid-container {
