--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -5,7 +5,8 @@
 body {
   min-width: 26em;
   margin: 0 auto;
-  background-color: #bfcc94;
+  /* background-color: #bfcc94; */
+  background-color: whitesmoke;
   color: #0d1821;
   height: 100vh;
   width: 100vw;
@@ -31,6 +32,7 @@ header img {
   padding-left: 15px;
   padding-right: 15px;
   max-width: 85px;
+ 
 }
 
 section {
@@ -52,6 +54,30 @@ footer p {
   padding: 0;
   margin: 0;
 }
+
+.hero-ph {
+  margin: 10px auto;
+  border: 1px solid darkslategrey;
+  width: 100%;
+  height: 250px;
+}
+
+.hero-container {
+  position: relative;
+  width: 960px;
+  height: 300px;
+  margin: 10px auto;
+}
+
+.weathersummary {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  background: linear-gradient(#b4cded, #bfcc94);
+  opacity: 70%;
+  padding: 10px;
+}
+
 
 h1,
 h2,
@@ -122,5 +148,6 @@ nav {
 .main-container p {
   padding: 15px;
   margin: 5px;
-  background-color: whitesmoke;
+  /* background-color: whitesmoke; */
+  background-color: #bfcc94;
 }
