--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -1,6 +1,24 @@
 @media only screen and (min-width: 32.5em) {
 
 
+  .hero-ph {
+    margin: 10px auto;
+    width: 100%;
+    height: 250px;
+  }
+
+  .hero-container {
+    position: relative;
+    width: 960px;
+    height: 300px;
+    margin: 10px auto;
+  }
+
+  body {
+    height: 100vh;
+    width: 90vw;
+  }
+
   .navigation {
     display: flex;
 
