--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -5,7 +5,6 @@
 body {
   min-width: 26em;
   margin: 0 auto;
-  /* background-color: #bfcc94; */
   background-color: whitesmoke;
   color: #0d1821;
   height: 100vh;
@@ -41,7 +40,7 @@ section {
 
 section p {
   align-self: center;
-  margin: 0;
+  margin: 5px;
 }
 
 footer {
@@ -54,23 +53,23 @@ footer p {
   margin: 0;
 }
 
-.hero-ph {
-  margin: 10px auto;
-  border: 1px solid darkslategrey;
-  width: 100%;
-  height: 250px;
-}
+ .hero-ph {
+   margin: 10px auto;
+   /* border: 1px solid darkslategrey; */
+   width: 100%;
+   height: 250px;
+ }
 
-.hero-container {
-  position: relative;
-  width: 960px;
-  height: 300px;
-  margin: 10px auto;
-}
+ .hero-container {
+   position: relative;
+   width: 960px;
+   height: 300px;
+   margin: 10px auto;
+ }
 
 .weathersummary {
   position: absolute;
-  top: 50px;
+  top: 40px;
   left: 50px;
   background: linear-gradient(#b4cded, #bfcc94);
   opacity: 70%;
