--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Yaldevi&display=swap');
 
-/* https: //coolors.co/0d1821-344966-b4cded-f0f4ef-bfcc94 */
+/* https://coolors.co/0d1821-344966-b4cded-f0f4ef-bfcc94-ffd447 */
 
 body {
   min-width: 26em;
@@ -13,17 +13,29 @@ body {
   font-family: 'Yaldevi', sans-serif;
 }
 
+.pancakes p {
+  display: none;
+  background-color: #FFD447;
+  padding: 10px;
+  margin-bottom: -0.1em;
+  font-size: 1em;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  font-weight: bold;
+  color: #0d1821;
+}
+
 header,
 footer {
   background-color: #344966;
   color: #b4cded;
   display: flex;
-  justify-content: center;
   padding: 20px;
 }
 
 header {
   padding: 15px;
+  justify-content: center;
 }
 
 header img {
@@ -43,29 +55,15 @@ section p {
   margin: 5px;
 }
 
-footer {
-  flex-flow: column;
-  align-items: center;
+.hero-container {
+  position: relative;
+  margin: 10px auto;
+
 }
 
-footer p {
-  padding: 0;
-  margin: 0;
+.hero-ph {
+  max-width: 100px;
 }
-
- .hero-ph {
-   margin: 10px auto;
-   /* border: 1px solid darkslategrey; */
-   width: 100%;
-   height: 250px;
- }
-
- .hero-container {
-   position: relative;
-   width: 960px;
-   height: 300px;
-   margin: 10px auto;
- }
 
 .weathersummary {
   position: absolute;
@@ -78,7 +76,7 @@ footer p {
 }
 
 hr {
-  border:1px solid #344966;
+  border: 1px solid #344966;
 }
 
 h1,
@@ -154,6 +152,42 @@ nav {
 .main-container p {
   padding: 15px;
   margin: 5px;
-  /* background-color: whitesmoke; */
   background-color: #bfcc94;
+}
+
+footer p {
+  padding: 5px;
+  margin: 0;
+  flex-flow: column;
+  align-items: center;
+}
+
+footer a {
+  color: #b4cded;
+}
+
+footer a:hover {
+  color: #bfcc94;
+}
+
+.forecast {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.forecast-day {
+  flex: 1 1 auto;
+  background-color: #b4cded;
+  border: 1px solid black;
+  text-align: center;
+  max-width: 640px;
+  margin: 0 auto;
+  padding: 5px;
+}
+
+.day {
+  display: block;
+  padding: 5px;
+  border-bottom: 1px solid black;
+  text-align: center;
 }
