--- a/lesson6/css/medium.css
+++ b/lesson6/css/medium.css
@@ -1,10 +1,10 @@
 @media only screen and (min-width: 32.5em) {
 
 
-  body {
+  /* body {
     height: 100vh;
     width: 90vw;
-  }
+  } */
 
   .navigation {
     display: flex;
@@ -19,5 +19,18 @@
   .navigation li:first-child {
     display: none;
   }
+
+  /* main div section.weathersummary {
+    position: absolute;
+    top: 15px;
+    left: 30px;
+  } */
+
+  article picture.art-pic img {
+    padding-bottom: 15px;
+    min-width: 25%;
+
+  }
+
 
 }
