--- a/lesson6/css/medium.css
+++ b/lesson6/css/medium.css
@@ -1,11 +1,6 @@
 @media only screen and (min-width: 32.5em) {
 
 
-  /* body {
-    height: 100vh;
-    width: 90vw;
-  } */
-
   .navigation {
     display: flex;
 
@@ -20,17 +15,16 @@
     display: none;
   }
 
-  /* main div section.weathersummary {
+  .weathersummary {
+    margin: 5px;
+    background: linear-gradient(#b4cded, #bfcc94);
+    opacity: 70%;
+    padding: 10px;
+    box-shadow: 0 0 30px rgb(52, 126, 116);
+    max-width: fit-content;
+    top: 20px;
+    left: 25px;
     position: absolute;
-    top: 15px;
-    left: 30px;
-  } */
-
-  article picture.art-pic img {
-    padding-bottom: 15px;
-    min-width: 25%;
-
   }
-
 
 }
