--- a/lesson6/css/small.css
+++ b/lesson6/css/small.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Yaldevi&display=swap'); */
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Yaldevi&display=swap');
+*/
 /* https://coolors.co/0d1821-344966-b4cded-f0f4ef-bfcc94-ffd447 */
 
 body {
@@ -58,35 +58,21 @@ header section p {
 .hero-container {
   margin: 10px auto;
   position: relative;
-  width: 100%;
+  max-width: 960px;
 }
 
 main div picture.hero-ph {
-  /* width: 100%;
-  /* margin: 0 auto; */
-  /* border: 1px red dashed;  */
   display: block;
   width: 96%;
   margin: 0 2%;
 }
 
 main div picture.hero-ph img {
-  /* width: 100%; */
-  display: block;
-  max-width: 96%;
-  margin: 0 auto;
+  width: 100%;
 }
 
-
 .weathersummary {
-  margin: 5px;
-  background: linear-gradient(#b4cded, #bfcc94);
-  opacity: 70%;
-  padding: 10px;
-  box-shadow: 0 0 30px rgb(52, 126, 116);
-  position: absolute;
-  top: 15px;
-  left: 30px;
+  box-shadow: 0 0 5px rgb(52, 96, 126);
 }
 
 .ws-grid {
@@ -95,7 +81,7 @@ main div picture.hero-ph img {
 }
 
 h3 {
-  margin: 0;
+  margin: 15px 0 10px 0;
   text-align: center;
 }
 
@@ -110,8 +96,7 @@ article picture.art-pic {
 }
 
 article picture.art-pic img {
-  min-width: 50%;
-  max-width: 500px;
+  width: 50%;
   float: left;
   margin: 0 10px 0 0;
 }
