--- a/lesson6/css/small.css
+++ b/lesson6/css/small.css
@@ -110,8 +110,9 @@ article {
   padding: 15px;
 }
 
-hr {
-  border: 1px solid #344966;
+section.weathersummary h3 {
+  border-bottom: 2px solid #7d8da3;
+
 }
 
 h1,
@@ -179,7 +180,7 @@ nav {
 main {
   max-width: 1200px;
   margin: 0 auto;
-  
+
 }
 
 
