--- a/lesson7/css/large.css
+++ b/lesson7/css/large.css
@@ -1,8 +1,9 @@
 @media only screen and (min-width: 60em) {
 
-  article picture.art-pic img {
-    width: 35%;
-    margin-bottom: 10px;
+  main div.grid {
+    grid-template-columns: 1fr 1fr 1fr;
+
+
   }
 
 
