--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -1,4 +1,3 @@
-
 body {
   min-width: 26em;
   margin: 0 auto;
@@ -10,16 +9,23 @@ body {
 
 }
 
-.pancakes p {
-  display: none;
-  background-color: #FFD447;
-  padding: 10px;
-  margin-bottom: -0.1em;
-  font-size: 1em;
-  font-family: 'Montserrat', sans-serif;
+main div.grid {
+  display: grid;
+  grid-row-gap: 2px;
+  grid-template-columns: 1fr;
+}
+
+picture {
+  padding-bottom: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
-  font-weight: bold;
-  color: #0d1821;
+  margin: 8px;
+  justify-self: center;
+}
+
+picture img {
+  width: 100%;
 }
 
 header,
@@ -27,7 +33,7 @@ footer {
   background-color: #344966;
   color: #b4cded;
   display: flex;
-  padding: 20px;
+
 }
 
 header {
@@ -52,80 +58,9 @@ header section p {
   margin: 5px;
 }
 
-.hero-container {
-  margin: 10px auto;
-  position: relative;
-  max-width: 960px;
-}
-
-
-main div picture.hero-ph {
-  display: block;
-  width: 96%;
-  margin: 0 2%;
-}
-
-main div picture.hero-ph img {
-  width: 100%;
-  padding-bottom: 15px;
-
-}
-
-.weathersummary {
-  padding: 10px 0 10px 0;
-  box-shadow: 0 0 5px rgb(52, 96, 126);
-  background: linear-gradient(#b4cded, #bfcc94);
-  max-width: 95%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto
-}
-
-.ws-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-h3 {
-  margin: 15px 0 10px 0;
-  text-align: center;
-}
-
-.ws-title {
-  justify-self: right;
-}
-
-
-article picture.art-pic {
-  width: 100%;
-  clear: both;
-}
-
-article picture.art-pic img {
-  width: 50%;
-  float: left;
-  margin: 0 10px 0 0;
-}
-
-article p {
-  margin: 0;
-}
-
-article {
-  padding: 15px;
-}
-
-section.weathersummary h3 {
-  border-bottom: 2px solid #7d8da3;
-
-}
-
 h1,
 h2,
-h3,
-h4,
-h5,
-h6 {
+  {
   color: #344966;
   font-family: 'Montserrat', sans-serif;
 }
@@ -186,30 +121,6 @@ main {
   max-width: 1200px;
   margin: 0 auto;
 
-}
-
-
-
-.forecast {
-  display: flex;
-  flex-flow: row wrap;
-}
-
-.forecast-day {
-  flex: 1 1 auto;
-  background-color: #b4cded;
-  border: 1px solid black;
-  text-align: center;
-  max-width: 640px;
-  margin: 0 auto;
-  padding: 5px;
-}
-
-.day {
-  display: block;
-  padding: 5px;
-  border-bottom: 1px solid black;
-  text-align: center;
 }
 
 /* -------------FOOTER--------------- */
