fix wk 7 part 2

--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -15,7 +15,7 @@ main div.grid {
   grid-template-columns: 1fr;
 }
 
-picture {
+figure {
   padding-bottom: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -24,7 +24,7 @@ picture {
   justify-self: center;
 }
 
-picture img {
+figure img {
   width: 100%;
 }
 
