--- a/form-input-validation/style.css
+++ b/form-input-validation/style.css
@@ -64,6 +64,7 @@ input:required:invalid {
 .form {
   background-color: rgb(109, 181, 240);
   padding: 15px;
+  width: 500px;
 }
 
 label {
@@ -79,4 +80,5 @@ h1 {
 
 body {
   background-color: rgb(206, 235, 206);
+  padding-left: 15px;
 }
