--- a/lesson9/css/prophets.css
+++ b/lesson9/css/prophets.css
@@ -1,16 +1,30 @@
 :root {
   background-color: rgb(248, 234, 217);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 div.cards {
-  background-color: rgb(245, 220, 187);
+  /* 
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  width: 400px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
-  padding-bottom: 20px;
-  
+  padding-bottom: 20px; */
+  display: grid;
+  grid-row-gap: 2px;
+  grid-template-columns: 1fr;
+  width: 400px;
+  margin: 0 auto;
+}
+
+
+section {
+  background-color: rgb(162, 236, 132);
+  padding-bottom: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  margin-bottom: 15px;
+  justify-self: center;
 }
 
 h2, p {
@@ -18,16 +32,33 @@ h2, p {
 }
 
 img {
-    display: block;
+    /* display: block;
     margin-left: auto;
-    margin-right: auto;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin-right: auto; */
+  margin: 0;
 }
 
 h1 {
   text-align: center;
 }
 
-section {
-  margin-bottom: 15px;
+
+@media only screen and (min-width: 32.5em) {
+div.cards {
+
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 25%;
 }
+}
+
+@media only screen and (min-width: 60em) {
+
+  div.cards {
+
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 20%;
+  }
+
+
+}
+
