--- a/lesson9/css/prophets.css
+++ b/lesson9/css/prophets.css
@@ -10,10 +10,12 @@ div.cards {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
   padding-bottom: 20px; */
   display: grid;
-  grid-row-gap: 2px;
+  grid-row-gap: 4px;
   grid-template-columns: 1fr;
   width: 400px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
@@ -24,7 +26,7 @@ section {
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
   margin-bottom: 15px;
-  justify-self: center;
+  /* justify-self: center; */
 }
 
 h2, p {
@@ -32,15 +34,16 @@ h2, p {
 }
 
 img {
-    /* display: block;
-    margin-left: auto;
-    margin-right: auto; */
+  display: block;
   margin: 0;
 }
 
-h1 {
+.center {
   text-align: center;
+  padding-bottom: 10px;
 }
+
+
 
 
 @media only screen and (min-width: 32.5em) {
