--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -1,4 +1,3 @@
-
 body {
   min-width: 26em;
   margin: 0 auto;
@@ -15,6 +14,7 @@ footer {
   background-color: #344966;
   color: #b4cded;
   display: flex;
+  flex-direction: column;
   padding: 20px;
 }
 
@@ -94,23 +94,112 @@ nav {
   display: block;
 }
 
+nav ul li.active a {
+  background-color: #bfcc94;
+  color: #0d1821;
+  font-weight: bold;
+  
+}
+
 /* ----------------MAIN------------- */
-
-main {
-  max-width: 1200px;
-  margin: 0 auto;
-
+.red {
+  color: darkred;
+  font-weight: bold;
 }
 
-main div {
-  background-color: aquamarine;
-  display: grid;
-  
+.green {
+  color: darkgreen;
+  font-weight: bold;
+}
+
+
+.stormForm,
+.facts {
+  background-color: #b4cded;
   padding: 15px;
-  
+
 
 }
 
+.facts {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 75%;
+
+}
+
+/* ----------------FORM---------------------- */
+
+.stormForm {
+  display: flex;
+  flex-direction: column;
+
+}
+
+#ratingvalue {
+  color: blue;
+  font-weight: bold;
+}
+
+fieldset {
+  margin: 0 auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 75%;
+
+}
+
+label.top {
+  display: block;
+  padding-top: 1rem;
+}
+
+label.top input,
+label.top textarea,
+label[for="danger"] {
+  display: block;
+  border-radius: 4px;
+  padding: .75rem 0;
+  width: 100%;
+  max-width: 20rem;
+}
+
+#top {
+  padding-top: 15px;
+}
+
+.reportBtn {
+  max-width: 20rem;
+  border-radius: .5rem;
+  background-color: #bfcc94;
+  color: #0d1821;
+  font-weight: bold;
+  letter-spacing: .1em;
+  padding: 5px;
+  border-color: gray;
+}
+
+input[type="radio"] {
+  width: 25px;
+  height: 25px;
+  margin: .5em;
+
+
+}
+
+.thanks {
+  background-color: #bfcc94;
+  padding: 15px;
+  text-align: center;
+}
+
+.video {
+  text-align: center;
+  margin-bottom: 10px;
+}
 /* -------------FOOTER--------------- */
 
 footer {
