storm report thank you fin

--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -98,7 +98,7 @@ nav ul li.active a {
   background-color: #bfcc94;
   color: #0d1821;
   font-weight: bold;
-  
+
 }
 
 /* ----------------MAIN------------- */
@@ -196,13 +196,22 @@ input[type="radio"] {
   text-align: center;
 }
 
-.video {
-  text-align: center;
+iframe {
   margin-bottom: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin: 0 auto;
+  width: 85%;
+}
+
+figcaption {
+  text-align: center;
 }
 /* -------------FOOTER--------------- */
 
 footer {
+  margin-top: 15px;
   justify-content: space-around;
   clear: both;
 }
