--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -200,6 +200,13 @@ nav {
 }
 
 /* ----------------MAIN------------- */
+.cards {
+  background-color: #bfcc94;
+  margin: 10px auto;
+  position: relative;
+  max-width: 960px;
+}
+
 .wk-h {
   color: darkred;
 }
