--- a/lesson11/css/css/full-site-css/small.css
+++ b/lesson11/css/css/full-site-css/small.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Yaldevi&display=swap');
 
 /* https://coolors.co/0d1821-344966-b4cded-f0f4ef-bfcc94-ffd447 */
+ 
 
 body {
   min-width: 26em;
@@ -9,19 +10,9 @@ body {
   color: #0d1821;
   font-size: 1.1em;
   font-family: 'Yaldevi', sans-serif;
-
 }
 
-.pancakes {
-  background-color: #FFD447;
-  padding: 10px;
-  margin-bottom: -0.1em;
-  font-size: 1em;
-  font-family: 'Montserrat', sans-serif;
-  text-align: center;
-  font-weight: bold;
-  color: #0d1821;
-}
+/* ---------- header & footer ---------- */
 
 header,
 footer {
@@ -53,73 +44,7 @@ header section p {
   margin: 5px;
 }
 
-.hero-container {
-  margin: 10px auto;
-  position: relative;
-  max-width: 960px;
-}
-
-
-main div picture.hero-ph {
-  display: block;
-  width: 96%;
-  margin: 0 2%;
-}
-
-main div picture.hero-ph img {
-  width: 100%;
-  padding-bottom: 15px;
-
-}
-
-.weathersummary {
-  padding: 10px 0 10px 0;
-  box-shadow: 0 0 5px rgb(52, 96, 126);
-  background: linear-gradient(#b4cded, #bfcc94);
-  max-width: 95%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto
-}
-
-.ws-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-h3 {
-  margin: 15px 0 10px 0;
-  text-align: center;
-}
-
-.ws-title {
-  justify-self: right;
-}
-
-
-article picture.art-pic {
-  width: 100%;
-  clear: both;
-}
-
-article picture.art-pic img {
-  width: 50%;
-  float: left;
-  margin: 0 10px 0 0;
-}
-
-article p {
-  margin: 0;
-}
-
-article {
-  padding: 15px;
-}
-
-section.weathersummary h3 {
-  border-bottom: 2px solid #7d8da3;
-
-}
+/* ---------- headings ---------- */
 
 h1,
 h2,
@@ -142,6 +67,8 @@ h2 {
   padding: 15px;
   margin: 5px;
 }
+
+/* ---------- nav ---------- */
 
 nav {
   background-color: #0d1821;
@@ -180,7 +107,6 @@ nav {
 
 .navigation li a:hover {
   color: #0d1821;
- 
 }
 
 .active {
@@ -192,45 +118,11 @@ nav {
   font-weight: bold;
 }
 
-
-
 .responsive li {
   display: block;
 }
 
-/* ----------------MAIN------------- */
-.wk-h {
-  color: darkred;
-}
-
-.wk-l {
-  color: darkblue;
-}
-
-main {
-  max-width: 960px;
-  margin: 0 auto;
-
-}
-
-.forecast-day {
-  flex: 1 1 auto;
-  background-color: #b4cded;
-  border: 1px solid black;
-  text-align: center;
-  width: 75%;
-  margin: 15px auto;
-  padding: 5px;
-}
-
-.day {
-  display: block;
-  padding: 5px;
-  border-bottom: 1px solid black;
-  text-align: center;
-}
-
-/* -------------FOOTER--------------- */
+/* ---------- footer ---------- */
 
 footer {
   justify-content: space-around;
