--- a/lesson11/css/thanks-page.css
+++ b/lesson11/css/thanks-page.css
@@ -1,11 +1,11 @@
 
-/* ---------- thanks page ---------- */
-
 .thanks {
   background-color: #bfcc94;
   padding: 15px;
   text-align: center;
 }
+
+/* ---------- video ---------- */
 
 iframe {
   margin-bottom: 10px;
