--- a/lesson11/css/preston-css/small.css
+++ b/lesson11/css/preston-css/small.css
@@ -73,7 +73,7 @@ article picture.art-pic {
 article picture.art-pic img {
   width: 50%;
   float: left;
-  margin: 0 10px 0 0;
+  margin: 0 10px 10px 0;
 }
 
 article p {
