--- a/lesson11/css/index-css/large.css
+++ b/lesson11/css/index-css/large.css
@@ -1,5 +1,42 @@
 @media only screen and (min-width: 60em) {
 
+/* ---------- cards ---------- */
 
+.container {
+  position: relative;
+  max-width: 960px;
+}
+
+div.card {
+  display: flex;
+  flex-direction: row;
+  margin: 15px;
+}
+
+div.card:nth-child(odd) {
+  flex-direction: row-reverse;
+}
+
+div section {
+  border: 20px solid #bfcc94;
+  box-shadow: inset 0px 0px 0px 10px #b4cded;
+  box-sizing: border-box;
+  flex-grow: 1;
+
+}
+
+div section p {
+  text-align: center;
+  margin: 5px;
+}
+
+section h2 {
+  padding-top: 15px;
+}
+
+h3 {
+  padding: 25px;
+  margin: 0;
+}
 
 }
