--- a/lesson11/css/preston-css/small.css
+++ b/lesson11/css/preston-css/small.css
@@ -89,10 +89,6 @@ article {
   color: darkred;
 }
 
-.wk-l {
-  color: darkblue;
-}
-
 .forecast-day {
   flex: 1 1 auto;
   background-color: #b4cded;
@@ -132,10 +128,22 @@ figcaption {
 /* ---------- events ---------- */
 
 #events {
-  background-color: #b4cded;
   color: #0d1821;
   padding: 15px;
   margin-bottom: 15px;
-  border: 1px solid #0d1821;
+
+  border: 20px solid #bfcc94;
+  box-shadow: inset 0px 0px 0px 10px #b4cded;
+  box-sizing: border-box;
 }
 
+.underline {
+  display: block;
+  padding: 5px;
+  border-bottom: 1.5px solid #0d1821;
+  text-align: center;
+}
+
+div.events section {
+  padding-left: 15px;
+}
